# forma

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  forma.cabal  formaldehyde.cabal  stack.yaml
.github/workflows/: ci.yaml
Web/: Forma.hs  Formaldehyde.hs
Web/Forma/: StructuredErrors.hs
examples/: Main.hs
tests/: Main.hs
