cabal-version:   1.18
name:            forma
version:         1.1.3
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.2
homepage:        https://github.com/mrkkrp/forma
bug-reports:     https://github.com/mrkkrp/forma/issues
synopsis:        Parse and validate forms in JSON format
description:     Parse and validate forms in JSON format.
category:        Web
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/forma.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Web.Forma
    default-language: Haskell2010
    build-depends:
        aeson >=0.9 && <1.6,
        base >=4.12 && <5.0,
        containers >=0.5 && <0.7,
        mtl >=2.0 && <3.0,
        text >=0.2 && <1.3,
        unordered-containers >=0.2.5 && <0.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
        aeson >=0.9 && <1.6,
        base >=4.12 && <5.0,
        containers >=0.5 && <0.7,
        forma -any,
        hspec >=2.0 && <3.0,
        mtl >=2.0 && <3.0,
        text >=0.2 && <1.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
