cabal-version:   2.4
name:            forma
version:         1.2.0
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.8.4 ghc ==9.10.1 ghc ==9.12.1
homepage:        https://github.com/mrkkrp/forma
bug-reports:     https://github.com/mrkkrp/forma/issues
synopsis:        Parse and validate forms in JSON format
description:     Parse and validate forms in JSON format.
category:        Web
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/forma.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Web.Forma
    default-language: GHC2021
    build-depends:
        aeson >=2 && <3,
        base >=4.15 && <5,
        containers >=0.5 && <0.8,
        mtl >=2 && <3,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    default-language: GHC2021
    build-depends:
        aeson >=2 && <3,
        base >=4.15 && <5,
        containers >=0.5 && <0.8,
        forma,
        hspec >=2 && <3,
        mtl >=2 && <3,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
